--- a/Loon/Task/Task.conf
+++ b/Loon/Task/Task.conf
@@ -1,3 +1,5 @@
+cron "10 0,20 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_necklace.js,tag=♠️天天点券
+
 cron "30 11 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=🚛京东物流
 
 cron "5 3 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/jd/JD_BaiTiao.js, tag=📃京东白条
