--- a/Quantumult-X/Cookie.conf
+++ b/Quantumult-X/Cookie.conf
@@ -1,5 +1,4 @@
 hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,sub.store,weather-data.apple.com, api.weather.com,
-simple_cert_hostname=sub.store
 
 #Sub
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
@@ -8,4 +7,4 @@ simple_cert_hostname=sub.store
 hostname =#京东赚赚
 ^https\:\/\/api\.m\.jd\.com\/client\.action\?functionId\=interactIndex url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.cookie.js
 #彩云天气
-^https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js
+https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js
