--- a/Quantumult-X/Cookie.conf
+++ b/Quantumult-X/Cookie.conf
@@ -4,7 +4,7 @@ hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,sub.stor
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
 # 中青看点极速版自动阅读获取body
 ^https:\/\/ios\.baertt\.com\/v5\/article\/complete url script-request-body https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/zqgetbody.js
-hostname =#京东赚赚
+#京东赚赚
 ^https\:\/\/api\.m\.jd\.com\/client\.action\?functionId\=interactIndex url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.cookie.js
 #彩云天气
 https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js
