--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -18,8 +18,8 @@ cron "0 7 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/mas
 
 cron "33 */3 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_factory.js, tag=🏭京东工厂
 
-cron "04 00 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
-cron "04 00 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
+cron "0 */14 0-20 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
+cron "0 */14 0-20 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
 
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/birthdayCountDown/index.js, tag=🎂生日倒计时
 
