--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -15,8 +15,8 @@ cron "10 6-22/4 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/Qua
 
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, tag=👾泡泡作战
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=🧰京东赚赚
-cron "1 0-21/1" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
-cron "1 0-21/1" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
+cron "3 */1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
+cron "3 */1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
 
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/birthdayCountDown/index.js, tag=🎂生日倒计时
 
