--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -4,8 +4,11 @@
 
 
 
+cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
+cron "25 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
 
-cron "10 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js, enabled=false, tag=🏅京喜金牌厂长
+
+cron "10 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js, enabled=false, tag=🏅金牌厂长
 
 cron "*/11 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
 
@@ -25,9 +28,6 @@ cron "2 0 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantum
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=🧰京东赚赚
 
 cron "33 */3 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_factory.js, tag=🏭京东工厂
-
-cron "04 00 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
-cron "04 00 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
 
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/birthdayCountDown/index.js, tag=🎂生日倒计时
 
