--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -4,13 +4,13 @@
 
 
 
-cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📗中青看点
-cron "25 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📗中青阅读
+cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📑中青看点
+cron "25 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📖中青阅读
 
 
 cron "10 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js, enabled=false, tag=🏅金牌厂长
 
-cron "*/11 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
+cron "*/11 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=🐧企鹅读书
 
 cron "30 11 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=🚛京东物流
 
