--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -3,6 +3,7 @@
 
 
 
+cron "30 23 * * *" script-path=https://raw.githubusercontent.com/MoPoQAQ/Script/main/Me/jx_cfd.js,tag=🐶喜财富岛
 
 cron "28 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📑中青看点
 cron "25 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📖中青阅读
