--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -1,39 +1,115 @@
 
 
+cron "27 6-22/4 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气
+
+cron "15 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东签到
+
+cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=中青看点
+
+cron "23 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=中青阅读
+
+cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
 
 
 
 
-cron "30 23 * * *" script-path=https://raw.githubusercontent.com/MoPoQAQ/Script/main/Me/jx_cfd.js,tag=🐶喜财富岛
+cron "31 6-18/6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_fruit.js, tag=东东农场
 
-cron "28 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=📑中青看点
+cron "33 7-19/6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pet.js, tag=东东萌宠
 
-cron "25 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=📖中青阅读
+cron "35 7-21/3 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_plantBean.js, tag=种豆得豆
+
+cron "37 1-23/3 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_superMarket.js, tag=京小超市
+
+cron "39 */2 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy.js, tag=宠汪汪汪
+
+cron "41 */3 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_speed.js, tag=天天加速
+
+cron "43 */3 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_moneyTree.js, tag=摇钱树呢
+
+cron "45 */3 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_dreamFactory.js,tag=京喜工厂
+
+cron "47 */4 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js,tag=金牌厂长
+
+cron "49 * * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdfactory.js,tag=东东工厂
+
+cron "51 */6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_daily_egg.js, tag=天天提鹅
+
+cron "53 */6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pigPet.js, tag=全民养猪
+
+cron "55 */1 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食
 
 
-cron "38 3-23/4 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js, enabled=false, tag=🏅金牌厂长
 
-cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=🐧企鹅读书
+cron "20 6 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js, tag=京东京喜
 
-cron "30 11 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=🚛京东物流
+cron "21 6 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, tag=泡泡作战
 
-cron "0 19 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/jd/JD_BaiTiao.js, tag=📃京东白条
+cron "22 6 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=京东赚赚
 
-cron "30 1 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=🖥吾爱破解
+cron "10 0 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_shop.js, tag=进店领豆
 
-cron "10 2 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js, tag=🎶网易音乐
+cron "23 6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_change.js, tag=京豆变动
 
-cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js, tag=🐶京东京喜
+cron "5 0 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_club_lottery.js, tag=摇京豆呢
 
-cron "10 6-22/4 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=🌩彩云天气
+cron "10 0,20 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_necklace.js,tag=天天点券
 
-cron "28 6 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, tag=👾泡泡作战
-cron "40 6 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=🧰京东赚赚
+cron "16 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_small_home.js, tag=东东小窝
+
+cron "24 6 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_syj.js, tag=十元街
+
+cron "25 6 * * *" script-path=https://raw.githubusercontent.com/MoPoQAQ/Script/main/Me/jx_cfd.js,tag=京东财富岛
+
+cron "27 6 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js,tag=京东抽奖机
+
+cron "28 6 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js,tag=京东排行榜
+
+cron "29 6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_redPacket.js, tag=全民开红包
+
+cron "0 0,8,12,16 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_reward.js, tag=宠汪汪兑奖
 
 
-cron "0 50 6 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js, tag=🍕饿了么-签到
 
-cron "0 50 6 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js, tag=🍟饿了么-打卡
 
-cron "0 0,8,12,16 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_reward.js, tag=🦁宠汪汪积分兑换奖品
+
+
+
+
+cron "30 11 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, tag=京东物流
+
+cron "0 19 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/jd/JD_BaiTiao.js, tag=京东白条
+
+cron "30 1 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=吾爱破解
+
+cron "10 2 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js, tag=网易音乐
+
+cron "0 50 6 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js, tag=饿了么-签到
+
+cron "0 50 6 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js, tag=饿了么-打卡
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+cron "0 0,6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_steal.js, tag=宠汪汪偷好友积分与狗粮
+
+cron "0 0 0 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_blueCoin.js, tag=京小超兑换奖品
+
+cron "55 23 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_unsubscribe.js, tag=取关店铺
 
