--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -8,7 +8,7 @@ cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scri
 
 cron "23 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=中青阅读
 
-cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
+cron "12 8-16/1 * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
 
 
 
