--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -4,9 +4,9 @@ cron "27 6-22/4 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/Qua
 
 cron "15 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东签到
 
-cron "25 4-23/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=中青看点
+cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=中青看点
 
-cron "23 4-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=中青阅读
+cron "*/15 * * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/YOUTH_READ.js, enabled=true, tag=中青阅读
 
 cron "12 8-16/1 * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
 
