--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -10,7 +10,7 @@ cron "*/15 * * * *" script-path=https://cdn.jsdelivr.net/gh/songyangzz/Quantumul
 
 cron "12 8-16/1 * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, enabled=false, tag=企鹅读书
 
-
+cron "0 22 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, tag=能量积分
 
 
 cron "31 6-18/6 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_fruit.js, tag=东东农场
