--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -1,4 +1,4 @@
-
+cron "0 9,12,18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场
 
 cron "27 6-22/4 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气
 
