--- a/Loon/Cookie.conf
+++ b/Loon/Cookie.conf
@@ -20,7 +20,7 @@ http-request https://ios.baertt.com/v5/article/complete.json script-path=https:/
 http-request ^https\:\/\/api\.m\.jd\.com\/client\.action\?functionId\=interactIndex script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.cookie.js, requires-body=false, timeout=10, tag=京东赚赚cookie
 
 
-
+http-request ^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js, timeout=10, enabled=false, tag=京喜农场cookie
 
 hostname = api.m.jd.com,www.52pojie.cn，.bilibili.com，m.ximalaya.com,*.youth.cn, ios.baertt.com，wq.jd.com，weather-data.apple.com, api.weather.com，h5.ele.me，
 
