--- a/Loon/Feeding.conf
+++ b/Loon/Feeding.conf
@@ -3,28 +3,28 @@
 
 #第一次
 
-cron "3 4 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食一
+cron "3 4 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍐
 
 #第二次
 
-cron "16 7 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食二
+cron "16 7 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍋
 
 #第三次
 
-cron "19 10 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食三
+cron "19 10 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍌
 
 #第四次
 
-cron "22 13 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食四
+cron "22 13 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍉
 
 #第五次
 
-cron "25 16 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食五
+cron "25 16 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍇
 
 #第六次
 
-cron "28 19 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食六
+cron "28 19 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍓
 
 #第七次
 
-cron "31 22 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=汪汪喂食七
+cron "31 22 * * *" script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_feedPets.js, tag=🍒
